copied over functioning code

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 /.venv/
-/__pycache__/
 /.idea/*
+.ipynb*
+data/mp3*
+data/defacto_database/
+data/.DS_STORE
+__pycache__/
+.pytest_cache/
+model_development/
+deprecated_model/
+test.txt
