--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-blinker==1.7.0
-click==8.1.7
 Flask==3.0.2
-importlib-metadata==7.0.1
-itsdangerous==2.1.2
-Jinja2==3.1.3
-MarkupSafe==2.1.5
-Werkzeug==3.0.1
-zipp==3.17.0
+librosa==0.10.1
+matplotlib==3.8.3
+numpy==1.26.4
+pydub==0.25.1
+pytest==8.0.2
+scipy==1.12.0
+torch==2.2.1
